change coding windows-1251

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <html><head>
-    <meta charset='utf-8'>
+    <meta charset='windows-1251'>
     <title>О реализации</title>
     </head>
     <body><h1>О чем все это</h1><img src='zod.png' width=100 height=100 /><ol><li>Времена</li><ul><li>утром</li></ul><ul><li>днём</li></ul><ul><li>вечером</li></ul><ul><li>ночью</li></ul><ul><li>после обеда</li></ul><ul><li>перед сном</li></ul><li>Глаголы</li><ul><li>ожидайте</li></ul><ul><li>предостерегайтесь</li></ul><ul><li>будьте открыты для</li></ul><li>Ожидания</li><ul><li>гостей из забытого прошлого</li></ul><ul><li>встреч со старыми знакомыми</li></ul><ul><li>неожиданного праздника</li></ul><ul><li>приятных перемен</li></ul></ol><hr/><a href='index.html'>На главную</a></body></html>
