--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <html><head>
-    <meta charset='windows-1251'>
-    <title>О реализации</title>
+    <meta charset='utf-8'>
+    <title>Рћ СЂРµР°Р»РёР·Р°С†РёРё</title>
     </head>
-    <body><h1>О чем все это</h1><img src='zod.png' width=100 height=100 /><ol><li>Времена</li><ul><li>утром</li></ul><ul><li>днём</li></ul><ul><li>вечером</li></ul><ul><li>ночью</li></ul><ul><li>после обеда</li></ul><ul><li>перед сном</li></ul><li>Глаголы</li><ul><li>ожидайте</li></ul><ul><li>предостерегайтесь</li></ul><ul><li>будьте открыты для</li></ul><li>Ожидания</li><ul><li>гостей из забытого прошлого</li></ul><ul><li>встреч со старыми знакомыми</li></ul><ul><li>неожиданного праздника</li></ul><ul><li>приятных перемен</li></ul></ol><hr/><a href='index.html'>На главную</a></body></html>
+    <body><h1>Рћ С‡РµРј РІСЃРµ СЌС‚Рѕ</h1><img src='zod.png' width=100 height=100 /><ol><li>Р’СЂРµРјРµРЅР°</li><ul><li>СѓС‚СЂРѕРј</li></ul><ul><li>РґРЅС‘Рј</li></ul><ul><li>РІРµС‡РµСЂРѕРј</li></ul><ul><li>РЅРѕС‡СЊСЋ</li></ul><ul><li>РїРѕСЃР»Рµ РѕР±РµРґР°</li></ul><ul><li>РїРµСЂРµРґ СЃРЅРѕРј</li></ul><li>Р“Р»Р°РіРѕР»С‹</li><ul><li>РѕР¶РёРґР°Р№С‚Рµ</li></ul><ul><li>РїСЂРµРґРѕСЃС‚РµСЂРµРіР°Р№С‚РµСЃСЊ</li></ul><ul><li>Р±СѓРґСЊС‚Рµ РѕС‚РєСЂС‹С‚С‹ РґР»СЏ</li></ul><li>РћР¶РёРґР°РЅРёСЏ</li><ul><li>РіРѕСЃС‚РµР№ РёР· Р·Р°Р±С‹С‚РѕРіРѕ РїСЂРѕС€Р»РѕРіРѕ</li></ul><ul><li>РІСЃС‚СЂРµС‡ СЃРѕ СЃС‚Р°СЂС‹РјРё Р·РЅР°РєРѕРјС‹РјРё</li></ul><ul><li>РЅРµРѕР¶РёРґР°РЅРЅРѕРіРѕ РїСЂР°Р·РґРЅРёРєР°</li></ul><ul><li>РїСЂРёСЏС‚РЅС‹С… РїРµСЂРµРјРµРЅ</li></ul></ol><hr/><a href='index.html'>РќР° РіР»Р°РІРЅСѓСЋ</a></body></html>
